fix localVideo overlaping

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,7 @@ body {
   /* width: 30%; */
   bottom: 10px;
   left: 10px;
+  z-index: 99999;
 }
 
 #local-container video,
